# Flappy_bird

./: Cargo.toml  notes.tex
src/: main.rs
